--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@nextui-org/react": "^2.3.6",
     "framer-motion": "^11.2.6",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.379.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "@types/node": "^20",
