--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.3.6",
     "framer-motion": "^11.2.6",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
