--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.3.6",
+    "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.6",
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
@@ -19,6 +22,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "sonner": "^1.4.41"
   },
   "devDependencies": {
