--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.3.6",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.6",
     "imgbb-uploader": "^1.5.1",
