--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
-    "sonner": "^1.4.41"
+    "sonner": "^1.4.41",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.11.1"
   },
   "devDependencies": {
     "@types/node": "^20",
